# choix-narratifs

./: .gitignore  BRAINSTORM.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
aidd_docs/tasks/2026_05/: 2026_05_30-1-socle-astro.md
aidd_docs/tasks/2026_06/: 2026_06_03-1-moteur-phase1.md  2026_06_03-3-phase3-audit.md  2026_06_03-4-phase4-elaboration.md  2026_06_03-5-phase5-audit.md  2026_06_03-6-systeme-moves-audit.md
docs/: mues-monsterhearts.md  pipeline-mues.md  playbooks-monster-of-the-week.md
engine/: Cargo.toml  README.md
engine/core/: Cargo.toml
engine/core/examples/: emit_contract.rs  emit_possibles.rs  emit_schema.rs
engine/core/src/: directeur.rs  engine.rs  lib.rs  moves.rs  packet.rs  state.rs  verifier.rs
engine/core/tests/: export.rs  moves.rs  packet_challenge.rs  scene_spec.rs
engine/harness/: Cargo.toml
engine/harness/src/: main.rs
engine/wasm/: Cargo.toml
engine/wasm/src/: lib.rs
engine/wasm/tests/: boundary.rs
scripts/: build-engine.mjs  deploy.mjs  gen-mues-doc.mjs  gen-types.mjs
src/components/: Card.astro  CompteRendu.astro  Elaboration.astro  FunnelSelector.astro  JaugesTarotBoard.astro  MapEditor.astro  MoteurNarratif.astro  ParallaxeDraw.astro  ToolCard.astro  ToolEmbed.astro
src/data/: embeds.json  liens.json  mues-monsterhearts.json  mues-motw.json  parallaxe.json
src/layouts/: BaseLayout.astro
src/pages/: compte-rendu.astro  dialogues.astro  elaboration.astro  index.astro  jeux.astro  liens.astro  moteur-narratif.astro  solo.astro
src/pages/monster-of-the-week/: selecteur-de-playbooks.astro
src/pages/monsterhearts/: plan-de-classe.astro  selecteur-de-mues.astro  snake-bay.astro
src/pages/solo/: parallaxe.astro  (+1 more)
src/scripts/: classroom.ts  embeds-schema.ts  funnel.ts  jauges-tarot-schema.ts  liens-schema.ts  map-editor.ts  map-state.ts  mues-schema.ts  parallaxe-schema.ts  snakebay.ts  storage.ts
tests/: classroom.test.ts  embeds-content.test.ts  embeds-schema.test.ts  funnel.test.ts  jauges-tarot-engine.test.ts  liens-schema.test.ts  map-relations-groups.test.ts  map-state.test.ts  mues-coverage.test.ts  mues-schema.test.ts  parallaxe-schema.test.ts  snakebay.test.ts  storage.test.ts
tests/narrative/: contexte.test.ts  contract-runtime.test.ts  contract.test.ts  doubles.ts  export.test.ts  modules.test.ts  runtime-config.test.ts  scene-spec.test.ts  schema.test.ts  session.test.ts  snapshot-store.test.ts  stub-narrator.test.ts  vault-import.test.ts
(+25 files in other folders)
