# Workspace du moteur narratif (track CN du plan d'action).
# `core` : crate Rust pure (état, registre épistémique, directeur, oracle, verifier).
# `harness` : harnais terminal qui déroule la boucle avec un /narrate STUB (Phase 1).
# `wasm` : couche wasm-bindgen exposant l'API du core au JS de l'island (Phase 2).
[workspace]
resolver = "2"
members = ["core", "harness", "wasm"]
