[package]
name = "cn-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Cœur déterministe du moteur narratif choix-narratifs (état, directeur, verifier, paquet)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", optional = true }

[features]
# Génération des types TS depuis les types Rust (le moteur = source de vérité).
# Hors de cette feature, le build (et le wasm) n'embarque PAS ts-rs.
ts = ["dep:ts-rs"]
