[package]
name = "cn-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Cœur déterministe du moteur narratif choix-narratifs (état, directeur, verifier, paquet)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", optional = true }
schemars = { version = "0.8", optional = true }

[features]
# Génération du schéma publié depuis les types Rust (le moteur = source de vérité).
# Hors de ces features, le build (et le wasm) n'embarque NI ts-rs NI schemars.
ts = ["dep:ts-rs"]            # types TS compile-time (generated/*.ts)
schema = ["dep:schemars"]     # JSON Schema runtime agnostique (generated/schema.json)

# L'émetteur de schéma ne compile que sous la feature `schema` (sinon `cargo test`
# par défaut tenterait de le compiler sans schemars).
[[example]]
name = "emit_schema"
required-features = ["schema"]
