[package]
name = "cn-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Couche wasm-bindgen : expose l'API du core (restore/prepare/resolve/snapshot) au JS de l'island."

[lib]
# cdylib : artefact .wasm pour le web. rlib : permet les tests côté hôte.
crate-type = ["cdylib", "rlib"]

[dependencies]
cn-core = { path = "../core" }
wasm-bindgen = "0.2"
serde_json = "1"

[features]
# Active le panic hook lisible dans la console (à brancher côté wasm-pack si voulu).
default = []
